--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#projects{
+{
     text-align: center;
     background: linear-gradient(#42e3cd 0%,#137e87 100%);
     background-repeat: no-repeat;
