--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     background-repeat: no-repeat;
     width: 2020;
     height:510;
-    font-size: 25;    
+    font-size: 25;
+    z-index: 9;
 color:darkblue;
 }
 
