--- a/style.css
+++ b/style.css
@@ -1,4 +1,24 @@
-background: linear-gradient(#ffc7fd 0%,#195e87 100%);
-text-align: center;
+#projects{
+    text-align: center;
+    background: linear-gradient(#42e3cd 0%,#137e87 100%);
+    background-repeat: no-repeat;
+    width: 2020;
+    height:510;
+    font-size: 25;    
 color:darkblue;
-background-repeat: no-repeat
+}
+#intro{
+    background: linear-gradient(#ffc7fd 0%,#195e87 100%);
+        width:2020 ;
+    height:510;
+    text-align: center;
+    background-repeat: no-repeat;
+    z-index: 9;
+}
+#links{
+    background: linear-gradient(#fb6000 0%,#fbf200 100%);
+        width:2020 ;
+    height:510;
+    text-align: center;
+    background-repeat: no-repeat;
+}
