--- a/style.css
+++ b/style.css
@@ -1,22 +1,18 @@
 #projects{
-    text-align: center;
     background: linear-gradient(#42e3cd 0%,#137e87 100%);
     background-repeat: no-repeat;
-    font-size: 25;    
-color:darkblue;
 }
 #intro{
-    text-align: center;
     background: linear-gradient(#ffc7fd 0%,#195e87 100%);
     background-repeat: no-repeat;
     z-index: 9;
-    font-size: 25;
-    color:darkblue;
 }
 #links{
-    text-align: center;
     background: linear-gradient(#fb6000 0%,#fbf200 100%);
     background-repeat: no-repeat;
-    font-size: 25;
+}
+#all{
+    text-align: center;
+    font-size: 25;    
     color:darkblue;
 }
