--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #all{
     text-align: center;
-    background: linear-gradient(#5d41ea 0%,#dc00ec 100%);
+    background: linear-gradient(#3300ff 0%,#00de81 100%);
     background-repeat: no-repeat;
     font-size: 25;    
 color:darkblue;
